go/src/sample/sprinkler.vdl.go
// This file was auto-generated by the veyron vdl tool.
// Source: sprinkler.vdl

package sample

import (
	// The non-user imports are prefixed with "__" to prevent collisions.
	__veyron2 "veyron.io/veyron/veyron2"
	__context "veyron.io/veyron/veyron2/context"
	__ipc "veyron.io/veyron/veyron2/ipc"
	__vdlutil "veyron.io/veyron/veyron2/vdl/vdlutil"
	__wiretype "veyron.io/veyron/veyron2/wiretype"
)

// TODO(toddw): Remove this line once the new signature support is done.
// It corrects a bug where __wiretype is unused in VDL pacakges where only
// bootstrap types are used on interfaces.
const _ = __wiretype.TypeIDInvalid

// SprinklerClientMethods is the client interface
// containing Sprinkler methods.
//
// Sprinkler allows clients to control the virtual sprinkler.
type SprinklerClientMethods interface {
	// Status retrieves the Sprinkler's status (i.e., active, idle)
	Status(__context.T, ...__ipc.CallOpt) (string, error)
	// Start causes the Sprinkler to emit water for the given duration (in seconds).
	Start(ctx __context.T, duration uint16, opts ...__ipc.CallOpt) error
	// Stop causes the Sprinkler to cease watering.
	Stop(__context.T, ...__ipc.CallOpt) error
}

// SprinklerClientStub adds universal methods to SprinklerClientMethods.
type SprinklerClientStub interface {
	SprinklerClientMethods
	__ipc.UniversalServiceMethods
}

// SprinklerClient returns a client stub for Sprinkler.
func SprinklerClient(name string, opts ...__ipc.BindOpt) SprinklerClientStub {
	var client __ipc.Client
	for _, opt := range opts {
		if clientOpt, ok := opt.(__ipc.Client); ok {
			client = clientOpt
		}
	}
	return implSprinklerClientStub{name, client}
}

type implSprinklerClientStub struct {
	name   string
	client __ipc.Client
}

func (c implSprinklerClientStub) c(ctx __context.T) __ipc.Client {
	if c.client != nil {
		return c.client
	}
	return __veyron2.RuntimeFromContext(ctx).Client()
}

func (c implSprinklerClientStub) Status(ctx __context.T, opts ...__ipc.CallOpt) (o0 string, err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Status", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&o0, &err); ierr != nil {
		err = ierr
	}
	return
}

func (c implSprinklerClientStub) Start(ctx __context.T, i0 uint16, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Start", []interface{}{i0}, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

func (c implSprinklerClientStub) Stop(ctx __context.T, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Stop", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

func (c implSprinklerClientStub) Signature(ctx __context.T, opts ...__ipc.CallOpt) (o0 __ipc.ServiceSignature, err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Signature", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&o0, &err); ierr != nil {
		err = ierr
	}
	return
}

// SprinklerServerMethods is the interface a server writer
// implements for Sprinkler.
//
// Sprinkler allows clients to control the virtual sprinkler.
type SprinklerServerMethods interface {
	// Status retrieves the Sprinkler's status (i.e., active, idle)
	Status(__ipc.ServerContext) (string, error)
	// Start causes the Sprinkler to emit water for the given duration (in seconds).
	Start(ctx __ipc.ServerContext, duration uint16) error
	// Stop causes the Sprinkler to cease watering.
	Stop(__ipc.ServerContext) error
}

// SprinklerServerStubMethods is the server interface containing
// Sprinkler methods, as expected by ipc.Server.
// There is no difference between this interface and SprinklerServerMethods
// since there are no streaming methods.
type SprinklerServerStubMethods SprinklerServerMethods

// SprinklerServerStub adds universal methods to SprinklerServerStubMethods.
type SprinklerServerStub interface {
	SprinklerServerStubMethods
	// Describe the Sprinkler interfaces.
	Describe__() []__ipc.InterfaceDesc
	// Signature will be replaced with Describe__.
	Signature(ctx __ipc.ServerContext) (__ipc.ServiceSignature, error)
}

// SprinklerServer returns a server stub for Sprinkler.
// It converts an implementation of SprinklerServerMethods into
// an object that may be used by ipc.Server.
func SprinklerServer(impl SprinklerServerMethods) SprinklerServerStub {
	stub := implSprinklerServerStub{
		impl: impl,
	}
	// Initialize GlobState; always check the stub itself first, to handle the
	// case where the user has the Glob method defined in their VDL source.
	if gs := __ipc.NewGlobState(stub); gs != nil {
		stub.gs = gs
	} else if gs := __ipc.NewGlobState(impl); gs != nil {
		stub.gs = gs
	}
	return stub
}

type implSprinklerServerStub struct {
	impl SprinklerServerMethods
	gs   *__ipc.GlobState
}

func (s implSprinklerServerStub) Status(ctx __ipc.ServerContext) (string, error) {
	return s.impl.Status(ctx)
}

func (s implSprinklerServerStub) Start(ctx __ipc.ServerContext, i0 uint16) error {
	return s.impl.Start(ctx, i0)
}

func (s implSprinklerServerStub) Stop(ctx __ipc.ServerContext) error {
	return s.impl.Stop(ctx)
}

func (s implSprinklerServerStub) VGlob() *__ipc.GlobState {
	return s.gs
}

func (s implSprinklerServerStub) Describe__() []__ipc.InterfaceDesc {
	return []__ipc.InterfaceDesc{SprinklerDesc}
}

// SprinklerDesc describes the Sprinkler interface.
var SprinklerDesc __ipc.InterfaceDesc = descSprinkler

// descSprinkler hides the desc to keep godoc clean.
var descSprinkler = __ipc.InterfaceDesc{
	Name:    "Sprinkler",
	PkgPath: "sample",
	Doc:     "// Sprinkler allows clients to control the virtual sprinkler.",
	Methods: []__ipc.MethodDesc{
		{
			Name: "Status",
			Doc:  "// Status retrieves the Sprinkler's status (i.e., active, idle)",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // string
				{"", ``}, // error
			},
		},
		{
			Name: "Start",
			Doc:  "// Start causes the Sprinkler to emit water for the given duration (in seconds).",
			InArgs: []__ipc.ArgDesc{
				{"duration", ``}, // uint16
			},
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
		},
		{
			Name: "Stop",
			Doc:  "// Stop causes the Sprinkler to cease watering.",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
		},
	},
}

func (s implSprinklerServerStub) Signature(ctx __ipc.ServerContext) (__ipc.ServiceSignature, error) {
	// TODO(toddw): Replace with new Describe__ implementation.
	result := __ipc.ServiceSignature{Methods: make(map[string]__ipc.MethodSignature)}
	result.Methods["Start"] = __ipc.MethodSignature{
		InArgs: []__ipc.MethodArgument{
			{Name: "duration", Type: 51},
		},
		OutArgs: []__ipc.MethodArgument{
			{Name: "", Type: 65},
		},
	}
	result.Methods["Status"] = __ipc.MethodSignature{
		InArgs: []__ipc.MethodArgument{},
		OutArgs: []__ipc.MethodArgument{
			{Name: "", Type: 3},
			{Name: "", Type: 65},
		},
	}
	result.Methods["Stop"] = __ipc.MethodSignature{
		InArgs: []__ipc.MethodArgument{},
		OutArgs: []__ipc.MethodArgument{
			{Name: "", Type: 65},
		},
	}

	result.TypeDefs = []__vdlutil.Any{
		__wiretype.NamedPrimitiveType{Type: 0x1, Name: "error", Tags: []string(nil)}}

	return result, nil
}
